--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-type-animation": "^3.1.0",
     "styled-components": "^6.0.3",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
