--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-type-animation": "^3.1.0",
     "styled-components": "^6.0.3",
     "typescript": "^4.9.5",
